welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: 'while' expected but identifier found.
			do gauche();avance();
                                    ^Poucet:11: error: '(' expected but ';' found.
		else droite();avance();
                             ^Poucet:15: error: 'while' expected but '}' found.
}
^